Fixed issues with broadcasters displaying. Fixed issue with the headers not properly aligning

--- a/Victorious/WebApplication/Styles/less/Tournament/_Tournament.less
+++ b/Victorious/WebApplication/Styles/less/Tournament/_Tournament.less
@@ -51,27 +51,13 @@
             z-index: -1;
         }
 
-        /*.broadcasts {
-            .flexbox();
-            flex-flow: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            overflow: hidden;
-
-            iframe {
-                padding: .5em .5em;
-                flex: 1 0 calc(50% - 2em);
-                height: 18em;
-            }
-        }*/
-
         .broadcasts {
-            width: 100%;
+            margin: .5em;
+            height: 20em; 
 
             iframe {
                 width: 100%;
-                height: 50%;
-                padding: .5em 0;
+                height: 100%;
             }
         }
     }
@@ -115,11 +101,17 @@
             .bracket-header {
                 width: 100%;
                 padding-bottom: 1em;
-                text-align: center;
+                /*text-align: center;*/
 
                 #bestOfMatches {
                     width: inherit;
                     margin: auto;
+                }
+
+                .header-rounds {
+                    li {
+                        text-align: center;
+                    }
                 }
             }
 
